# clipper-lua

./: CMakeLists.txt  README.md  appveyor.yml
.appveyor/: LICENSE.md  build.bat  build.sh
src/: clipper.i  clipper_wrap.cxx
